Favorites button works but icon switching still needs to be fixed. Switch added to setting pages for real life/fantasy transition Added global variable to control real life/fantasy switch

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,10 @@ dependencies:
 
 
 dev_dependencies:
-  #flutter_test:
-    #sdk: flutter
-  #integration_test:
-    #sdk: flutter
+  flutter_test:
+    sdk: flutter
+  integration_test:
+    sdk: flutter
   build_runner: any #may need to review this
   json_serializable: any #may need to review this
 
