--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   sliding_up_panel: ^1.0.2
   google_maps_flutter: ^1.2.0
   json_annotation: 4.0.0
+  multiple_stream_builder: ^1.1.0
+  image_picker: ^0.6.7+22
+  firebase_storage: 3.1.6
+  permission_handler: ^5.1.0+2
+  intl: ^0.16.1
 
 
 dev_dependencies:
