--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_storage: 3.1.6
   permission_handler: ^5.1.0+2
   intl: ^0.16.1
+  #model_viewer: 0.8.1
+  #webview_flutter: 1.0.7
 
 
 dev_dependencies:
