--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.caverose.omnitrix_database_flutter">
+    package="com.app.sanctuary">
    <application
-        android:label="omnitrix_database_flutter"
+        android:label="project-sanctuary"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
+            android:exported="true"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
             android:usesCleartextTraffic="true"
