--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: omnitrix_database_flutter
+name: sanctuary
 description: The flutter version of the omnitrix database project
 
 # The following line prevents the package from being accidentally published to
