--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_auth_web: ^3.3.7
   cloud_firestore: ^3.1.11
   firebase_core: ^1.14.0
+  firebase_core_web: ^1.6.1
   provider: ^6.0.2
   flutter_riverpod: ^2.0.0-dev.0
   sliding_up_panel: ^2.0.0+1
