--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.14.0
   firebase_core_web: ^1.6.1
   provider: ^6.0.2
+  flutter_dotenv: ^5.0.2
   flutter_riverpod: ^2.0.0-dev.0
   sliding_up_panel: ^2.0.0+1
   google_maps_flutter: ^2.1.1
@@ -74,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
