--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   multiple_stream_builder: ^2.0.0
   image_picker: ^0.8.4+8
   auto_size_text: ^3.0.0
+  google_maps_flutter_web: ^0.3.2+1
   firebase_storage: ^10.2.7
   permission_handler: ^9.2.0
   intl: ^0.17.0
